@@ -237,20 +237,33 @@ my $test_instrument_id = 6;
 }
 
 {
-    my $i;
-    lives_ok {$i = $schema->resultset('Instrument')->create({
+    my $hs = $schema->resultset('Instrument')->create({
         id_instrument        => 103,
-        id_instrument_format => 1,
-        name                 => 'NV',
+        id_instrument_format => 10,
+        name                 => 'HS',
         external_name        => 'external',
         serial               => '12345',
         iscurrent            => 1,
-    })
-    } 'no error creating a new NovaSeq instrument';
-    is($i->instrument_format->model, 'NovaSeq', 'is NovaSeq instrument');
-    is($i->current_instrument_status, 'wash required', 'initial instrument status is set');
-    $i->update_instrument_status('up', 'pipeline');
-    is($i->status_to_change_to('run complete'), 'wash performed', 'NovaSeq skips skips wash required status');
+    });
+    is($hs->instrument_format->model, 'HiSeq', 'is HiSeq instrument');
+    $hs->update_instrument_status('up', 'pipeline');
+    $hs->autochange_status_if_needed('run complete', 'pipeline');
+    is($hs->current_instrument_status, 'wash required', 'HiSeq status automatically changes
+                                                         from up to wash_required');
+
+    my $nv = $schema->resultset('Instrument')->create({
+        id_instrument        => 104,
+        id_instrument_format => 1,
+        name                 => 'NV',
+        external_name        => 'external',
+        serial               => '12346',
+        iscurrent            => 1,
+    });
+    is($nv->instrument_format->model, 'NovaSeq', 'is NovaSeq instrument');
+    $nv->update_instrument_status('up', 'pipeline');
+    $nv->autochange_status_if_needed('run complete', 'pipeline');
+    is($nv->current_instrument_status, 'up', 'NovaSeq status remains at up when automatically
+                                              changed from up');
 }
 
 1;
